fixed spacing for division pages

--- a/public/css/partials/_single-division.scss
+++ b/public/css/partials/_single-division.scss
@@ -1,4 +1,4 @@
-.container__about, .container__special_projects {
+.container__about, .container__special_projects, .container__blogs {
 	clear: both;
 	margin: 24px 0px;
 }
